// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly with all props except translations 1`] = `
<WithTranslationContextComponent
  actions={
    Array [
      Object {
        "clickHandler": [Function],
        "label": "Action",
      },
    ]
  }
  closeHandler={[Function]}
  title="Modal title"
  translations={null}
>
  <Modal
    actions={
      Array [
        Object {
          "clickHandler": [Function],
          "label": "Action",
        },
      ]
    }
    closeHandler={[Function]}
    title="Modal title"
    translations={
      Object {
        "close": "Close",
      }
    }
  >
    <div
      className="overlay"
      onClick={[Function]}
      onScroll={[Function]}
      role="presentation"
    >
      <div
        className="root"
        onClick={[Function]}
        role="presentation"
      >
        <div
          className="head"
        >
          <h3
            className="headTitle"
          >
            Modal title
          </h3>
          <Button
            block={false}
            clickHandler={[Function]}
            disabled={false}
            icon="close"
            iconPosition="before"
            isLabelVisible={false}
            label="Close"
            loading={false}
            priority="flat"
            size="large"
            type="button"
            variant="default"
          >
            <button
              className="root
                    priorityFlat
                    sizeLarge
                    
                    iconPositionBefore"
              disabled={false}
              onClick={[Function]}
              title="Close"
              type="button"
            >
              <span
                className="icon"
              >
                <Icon
                  icon="close"
                  size="large"
                >
                  <svg
                    className="isRootLarge"
                    style={
                      Object {
                        "fill": "currentColor",
                      }
                    }
                  >
                    <use
                      xlinkHref="#ic_close_48px"
                    />
                  </svg>
                </Icon>
              </span>
              <span
                className="hiddenLabel"
              >
                Close
              </span>
            </button>
          </Button>
        </div>
        <div
          className="body"
        >
          Modal content
        </div>
        <div
          className="footer"
        >
          <span
            className="button"
          >
            <Button
              block={false}
              clickHandler={[Function]}
              disabled={false}
              icon={null}
              iconPosition="before"
              isLabelVisible={true}
              key="Action"
              label="Action"
              loading={false}
              priority="primary"
              size="medium"
              type="button"
              variant="default"
            >
              <button
                className="root
                      priorityPrimary
                      sizeMedium"
                disabled={false}
                onClick={[Function]}
                title={null}
                type="button"
              >
                <span>
                  Action
                </span>
              </button>
            </Button>
          </span>
          <span
            className="button"
          >
            <Button
              block={false}
              clickHandler={[Function]}
              disabled={false}
              icon={null}
              iconPosition="before"
              isLabelVisible={true}
              label="Close"
              loading={false}
              priority="default"
              size="medium"
              type="button"
              variant="default"
            >
              <button
                className="root
                      priorityDefault
                      sizeMedium"
                disabled={false}
                onClick={[Function]}
                title={null}
                type="button"
              >
                <span>
                  Close
                </span>
              </button>
            </Button>
          </span>
        </div>
      </div>
    </div>
  </Modal>
</WithTranslationContextComponent>
`;

exports[`rendering renders correctly with mandatory props only 1`] = `
<WithTranslationContextComponent
  closeHandler={[Function]}
  title="Modal title"
  translations={null}
>
  <Modal
    actions={Array []}
    closeHandler={[Function]}
    title="Modal title"
    translations={
      Object {
        "close": "Close",
      }
    }
  >
    <div
      className="overlay"
      onClick={[Function]}
      onScroll={[Function]}
      role="presentation"
    >
      <div
        className="root"
        onClick={[Function]}
        role="presentation"
      >
        <div
          className="head"
        >
          <h3
            className="headTitle"
          >
            Modal title
          </h3>
          <Button
            block={false}
            clickHandler={[Function]}
            disabled={false}
            icon="close"
            iconPosition="before"
            isLabelVisible={false}
            label="Close"
            loading={false}
            priority="flat"
            size="large"
            type="button"
            variant="default"
          >
            <button
              className="root
                    priorityFlat
                    sizeLarge
                    
                    iconPositionBefore"
              disabled={false}
              onClick={[Function]}
              title="Close"
              type="button"
            >
              <span
                className="icon"
              >
                <Icon
                  icon="close"
                  size="large"
                >
                  <svg
                    className="isRootLarge"
                    style={
                      Object {
                        "fill": "currentColor",
                      }
                    }
                  >
                    <use
                      xlinkHref="#ic_close_48px"
                    />
                  </svg>
                </Icon>
              </span>
              <span
                className="hiddenLabel"
              >
                Close
              </span>
            </button>
          </Button>
        </div>
        <div
          className="body"
        >
          Modal content
        </div>
        <div
          className="footer"
        >
          <span
            className="button"
          />
          <span
            className="button"
          >
            <Button
              block={false}
              clickHandler={[Function]}
              disabled={false}
              icon={null}
              iconPosition="before"
              isLabelVisible={true}
              label="Close"
              loading={false}
              priority="default"
              size="medium"
              type="button"
              variant="default"
            >
              <button
                className="root
                      priorityDefault
                      sizeMedium"
                disabled={false}
                onClick={[Function]}
                title={null}
                type="button"
              >
                <span>
                  Close
                </span>
              </button>
            </Button>
          </span>
        </div>
      </div>
    </div>
  </Modal>
</WithTranslationContextComponent>
`;

exports[`rendering renders correctly with translations 1`] = `
<WithTranslationContextComponent
  closeHandler={[Function]}
  title="Modal title"
  translations={
    Object {
      "close": "Zavřít",
    }
  }
>
  <Modal
    actions={Array []}
    closeHandler={[Function]}
    title="Modal title"
    translations={
      Object {
        "close": "Zavřít",
      }
    }
  >
    <div
      className="overlay"
      onClick={[Function]}
      onScroll={[Function]}
      role="presentation"
    >
      <div
        className="root"
        onClick={[Function]}
        role="presentation"
      >
        <div
          className="head"
        >
          <h3
            className="headTitle"
          >
            Modal title
          </h3>
          <Button
            block={false}
            clickHandler={[Function]}
            disabled={false}
            icon="close"
            iconPosition="before"
            isLabelVisible={false}
            label="Zavřít"
            loading={false}
            priority="flat"
            size="large"
            type="button"
            variant="default"
          >
            <button
              className="root
                    priorityFlat
                    sizeLarge
                    
                    iconPositionBefore"
              disabled={false}
              onClick={[Function]}
              title="Zavřít"
              type="button"
            >
              <span
                className="icon"
              >
                <Icon
                  icon="close"
                  size="large"
                >
                  <svg
                    className="isRootLarge"
                    style={
                      Object {
                        "fill": "currentColor",
                      }
                    }
                  >
                    <use
                      xlinkHref="#ic_close_48px"
                    />
                  </svg>
                </Icon>
              </span>
              <span
                className="hiddenLabel"
              >
                Zavřít
              </span>
            </button>
          </Button>
        </div>
        <div
          className="body"
        >
          Modal content
        </div>
        <div
          className="footer"
        >
          <span
            className="button"
          />
          <span
            className="button"
          >
            <Button
              block={false}
              clickHandler={[Function]}
              disabled={false}
              icon={null}
              iconPosition="before"
              isLabelVisible={true}
              label="Zavřít"
              loading={false}
              priority="default"
              size="medium"
              type="button"
              variant="default"
            >
              <button
                className="root
                      priorityDefault
                      sizeMedium"
                disabled={false}
                onClick={[Function]}
                title={null}
                type="button"
              >
                <span>
                  Zavřít
                </span>
              </button>
            </Button>
          </span>
        </div>
      </div>
    </div>
  </Modal>
</WithTranslationContextComponent>
`;
